Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-03-06 (SVN):
    * Makefiles,Xcode project file: add -mmacosx-version-min=10.2 among
      the CFLAGS and LDFLAGS. otherwise gcc sets the flag for 10.1, and
      midi_osx.c requires 10.2.

2013-03-03 (SVN):
    * minor documentation updates regarding fov and fov_adapt.

2013-03-03 (SVN):
    * screen.c (fov_adapt): changed software renderer to have fov_adapt
      enabled by default.

2013-03-03 (SVN):
    * update version date stamp to 2013-03-03.

2013-03-02 (SVN):
    * gl_vidamiga.c, gl_vidnt.c, gl_vidsdl.c: comment out the fullsbar
      stuff: to begin with, things aren't like those in quake and sbar
      is always drawn. besides, PowerVR cards are not around any more,
      too.)

2013-03-02 (SVN):
    * host_cmd.c (Host_Restart_f): fix error message argument order from
      previous rev.5156 change.

2013-03-02 (SVN):
    * host_cmd.c (Host_Changelevel_f, Host_Changelevel2_f): check to see
      the map file actually exists, issue a Host_Error() if it can't be
      found so that the client won't get stuck, i.e. the ages old "load
      failed" bug of quake.
    * (Host_Changelevel_f, Host_Changelevel2_f, Host_Restart_f): if the
      serverspawn fails even with an existing map, issue a Host_Error().

2013-03-02 (SVN):
    * view.c, cl_main.c: zero the cl.cshifts array from CL_Disconnect()
      instead of from V_UpdatePalette() every frame when not connected.
      copy the rev.5144 behavior, of calling V_CalcPowerupCshift() only
      when connected, to the opengl version.
    * update version date stamp to 2013-03-02.

2013-03-01 (SVN):
    * added opus libs and headers under oslibs for windows and macosx.
      added snd_opus.c to Xcode and Visual Studio project files. (it is
      still not enabled, however just adding USE_CODEC_OPUS among the
      preprocessor macros and adding libopusfile among the link libs is
      enough to do it.)

2013-02-28 (SVN):